kube/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: social-albums-keycloak
  name: social-albums-keycloak
  namespace: social-albums
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-albums-keycloak
  template:
    metadata:
      labels:
        app: social-albums-keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0
        command:
          - "/opt/keycloak/bin/kc.sh"
          - "start"
          - --health-enabled=true
          - --metrics-enabled=true
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /opt/keycloak/data
            name: social-albums-keycloak-pvc
        livenessProbe:
          exec:
            command:
              - curl
              - --head
              - -fsS
              - http://127.0.0.1:8080/health/ready
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
        - name: social-albums-keycloak-pvc
          persistentVolumeClaim:
            claimName: social-albums-keycloak-pvc
