kube/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: social-albums-keycloak
  name: social-albums-keycloak
  namespace: social-albums
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: social-albums-keycloak
  type: ClusterIP
