kube/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-albums-keycloak
  namespace: social-albums
spec:
  rules:
  - host: keycloak.social-albums.cucco.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: social-albums-keycloak
            port:
              number: 8080
  tls:
  - hosts:
    - keycloak.social-albums.cucco.org
    secretName: keycloak-social-albums-cucco-org-tls
